[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/level/level_nodes/dry_area/DryArea.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/Art/cave layer 2.png" type="Texture" id=2]
[ext_resource path="res://asset/Art/junkyard 1 layer 1.png" type="Texture" id=3]
[ext_resource path="res://asset/Art/junkyard 1 layer 3.png" type="Texture" id=4]
[ext_resource path="res://src/level/template/TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://asset/Art/junkyard 1 layer 2.png" type="Texture" id=6]
[ext_resource path="res://asset/Art/cave layer 3.png" type="Texture" id=7]
[ext_resource path="res://src/level/level_nodes/rain/RainParticles.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/level/level_nodes/anti_rust/AntiRustPickup.tscn" type="PackedScene" id=9]
[ext_resource path="res://asset/Art/cave layer 1.png" type="Texture" id=10]
[ext_resource path="res://src/level/Level.gd" type="Script" id=11]
[ext_resource path="res://src/level/level_nodes/respawn_area/RespawnArea2D.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/ui/LevelEndMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/level/level_nodes/water/water_shader.tres" type="Shader" id=14]
[ext_resource path="res://src/level/level_nodes/water/Water.tscn" type="PackedScene" id=15]
[ext_resource path="res://asset/Art/junkyard 1 layer 4.png" type="Texture" id=16]
[ext_resource path="res://asset/Art/junkyard 1 layer 5.png" type="Texture" id=17]
[ext_resource path="res://src/level/Background.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/level/level_nodes/level_end.tscn" type="PackedScene" id=19]
[ext_resource path="res://src/level/level_nodes/next_level_trigger.tscn" type="PackedScene" id=20]
[ext_resource path="res://asset/Art/player_idle_rust.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49, 14.5 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 14 )
shader_param/tint = Color( 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 30 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 288, 13 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 32, 12 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 36, 172 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 36, 173 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 352, 28 )

[node name="Level" type="Node2D"]
script = ExtResource( 11 )
background_audio = 2

[node name="LevelEndMenu" parent="." instance=ExtResource( 13 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 603, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.9 )
motion_mirroring = Vector2( 603, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 1, -37 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.75, 0.9 )
motion_mirroring = Vector2( 603, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 1, -75 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -3, 364 )
motion_scale = Vector2( 0.8, 0.9 )
motion_mirroring = Vector2( 603, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 3, -382 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
centered = false

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -3, 364 )
motion_scale = Vector2( 0.9, 0.9 )
motion_mirroring = Vector2( 603, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 3, -401 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 17 )
centered = false

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
offset = Vector2( 0, 280 )
transform = Transform2D( 1, 0, 0, 1, 0, 280 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_mirroring = Vector2( 480, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1, 23 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 10 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 480, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 1, 23 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_scale = Vector2( 0.75, 1 )
motion_mirroring = Vector2( 480, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2( 1, 23 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )
centered = false

[node name="RainParticles" parent="." instance=ExtResource( 8 )]
visible = false

[node name="Water" parent="." instance=ExtResource( 15 )]

[node name="WaterArea2D" type="Area2D" parent="Water"]
position = Vector2( 976, 210 )

[node name="WaterCollisionShape2D" type="CollisionShape2D" parent="Water/WaterArea2D"]
shape = SubResource( 2 )

[node name="WaterPolygon2D" type="Polygon2D" parent="Water/WaterArea2D"]
material = SubResource( 3 )
color = Color( 0.372549, 0.337255, 1, 0.411765 )

[node name="WaterArea2D2" type="Area2D" parent="Water"]
position = Vector2( 1152, 195 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/WaterArea2D2"]
shape = SubResource( 4 )

[node name="WaterPolygon2D" type="Polygon2D" parent="Water/WaterArea2D2"]
material = SubResource( 3 )
color = Color( 0.372549, 0.337255, 1, 0.411765 )

[node name="WaterArea2D3" type="Area2D" parent="Water"]
position = Vector2( 2560, 281 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/WaterArea2D3"]
position = Vector2( 0, -3 )
shape = SubResource( 5 )

[node name="WaterPolygon2D" type="Polygon2D" parent="Water/WaterArea2D3"]
material = SubResource( 3 )
color = Color( 0.372549, 0.337255, 1, 0.411765 )

[node name="WaterArea2D4" type="Area2D" parent="Water"]
position = Vector2( 3328, 241 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/WaterArea2D4"]
position = Vector2( 0, 4 )
shape = SubResource( 6 )

[node name="WaterPolygon2D" type="Polygon2D" parent="Water/WaterArea2D4"]
material = SubResource( 3 )
color = Color( 0.372549, 0.337255, 1, 0.411765 )

[node name="WaterArea2D5" type="Area2D" parent="Water"]
position = Vector2( 3656, 241 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/WaterArea2D5"]
position = Vector2( -4, 164 )
shape = SubResource( 7 )

[node name="WaterPolygon2D" type="Polygon2D" parent="Water/WaterArea2D5"]
material = SubResource( 3 )
color = Color( 0.372549, 0.337255, 1, 0.411765 )

[node name="WaterArea2D6" type="Area2D" parent="Water"]
position = Vector2( 3864, 241 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/WaterArea2D6"]
position = Vector2( 4, 163 )
shape = SubResource( 8 )

[node name="WaterPolygon2D" type="Polygon2D" parent="Water/WaterArea2D6"]
material = SubResource( 3 )
color = Color( 0.372549, 0.337255, 1, 0.411765 )

[node name="WaterArea2D7" type="Area2D" parent="Water"]
position = Vector2( 4320, 257 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water/WaterArea2D7"]
position = Vector2( 0, 4 )
shape = SubResource( 9 )

[node name="WaterPolygon2D" type="Polygon2D" parent="Water/WaterArea2D7"]
material = SubResource( 3 )
color = Color( 0.372549, 0.337255, 1, 0.411765 )

[node name="TileMap" parent="." instance=ExtResource( 5 )]
z_index = 1
tile_data = PoolIntArray( 131158, 6, 0, 131159, 5, 0, 196665, 6, 0, 196666, 5, 0, 196667, 5, 0, 196668, 5, 0, 196669, 5, 0, 196670, 7, 0, 196675, 6, 0, 196676, 5, 0, 196677, 7, 0, 196699, 6, 0, 196700, 5, 0, 196706, 6, 0, 196707, 7, 0, 327670, 5, 0, 327671, 5, 0, 262176, 6, 0, 262177, 5, 0, 262182, 6, 0, 262183, 7, 0, 262247, 6, 0, 262248, 7, 0, 262257, 6, 0, 262258, 7, 0, 262264, 6, 0, 262265, 7, 0, 393205, -1073741819, 0, 393206, -1610612728, 0, 393207, -1610612731, 0, 327701, 5, 0, 327702, 5, 0, 327703, 5, 0, 327707, 6, 0, 327708, 5, 0, 327734, 6, 0, 327735, 5, 0, 327736, 7, 0, 327754, 6, 0, 327755, 7, 0, 327770, 6, 0, 327771, 7, 0, 458741, -1073741819, 0, 458742, -1610612728, 0, 458743, -1610612731, 0, 393248, 10, 0, 393249, 9, 0, 393254, 10, 0, 393255, 9, 0, 393317, 6, 0, 393318, 7, 0, 393321, 6, 0, 393322, 7, 0, 393327, 6, 0, 393328, 7, 0, 393338, 6, 0, 393339, 7, 0, 393362, 6, 0, 393363, 5, 0, 524274, 5, 0, 524275, 5, 0, 524276, 5, 0, 524277, -1073741819, 0, 524278, -1610612728, 0, 524279, -1610612731, 0, 524280, 5, 0, 524281, 5, 0, 524282, 5, 0, 524283, 5, 0, 524284, 5, 0, 524285, 5, 0, 524286, 5, 0, 524287, 5, 0, 458752, 6, 0, 458753, 7, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 5, 0, 458763, 5, 0, 458764, 5, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 6, 0, 458769, 6, 0, 458770, 6, 0, 458771, 6, 0, 458772, 5, 0, 458773, 5, 0, 458774, 5, 0, 458775, 5, 0, 458776, 5, 0, 458777, 5, 0, 458778, 5, 0, 458779, 10, 0, 458780, 13, 0, 458781, 13, 0, 458782, 13, 0, 458783, 13, 0, 458784, 13, 0, 458785, 13, 0, 458786, 8, 0, 458787, 8, 0, 458788, 8, 0, 458789, 8, 0, 458790, 8, 0, 458791, 8, 0, 458792, 5, 0, 458793, 5, 0, 458794, 5, 0, 458795, 7, 0, 458800, 6, 0, 458801, 5, 0, 458802, 5, 0, 458803, 5, 0, 458804, 5, 0, 458805, 5, 0, 458806, 5, 0, 458807, 5, 0, 458808, 5, 0, 458809, 5, 0, 458810, 5, 0, 458811, 7, 0, 458816, 6, 0, 458817, 5, 0, 458818, 5, 0, 458819, 5, 0, 458820, 5, 0, 458821, 5, 0, 458822, 7, 0, 458841, 5, 0, 458842, 5, 0, 458843, 5, 0, 458844, 5, 0, 458845, 5, 0, 458846, 5, 0, 458847, 5, 0, 458848, 5, 0, 458849, 5, 0, 458850, 5, 0, 458851, 5, 0, 458852, 5, 0, 458859, 5, 0, 458860, 5, 0, 458861, 5, 0, 458862, 5, 0, 589813, -1073741815, 0, 589814, 8, 0, 589815, 8, 0, 589823, 0, 0, 524288, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524310, 0, 0, 524315, 10, 0, 524316, 13, 0, 524317, 13, 0, 524318, 13, 0, 524319, 13, 0, 524320, 13, 0, 524321, 13, 0, 524322, 13, 0, 524323, 8, 0, 524324, 8, 0, 524325, 8, 0, 524326, 8, 0, 524327, 8, 0, 524354, 8, 0, 524355, 8, 0, 524389, 8, 0, 524390, 8, 0, 524391, 8, 0, 524392, 8, 0, 524393, 8, 0, 524394, 8, 0, 524399, 8, 0, 524400, 8, 0, 524401, 8, 0, 524402, 9, 0, 524408, 10, 0, 524409, 8, 0, 524410, 8, 0, 524411, 8, 0, 524434, 10, 0, 524435, 9, 0, 524436, 5, 0, 524437, 5, 0, 524438, 5, 0, 524439, 5, 0, 524440, 5, 0, 524441, 5, 0, 524442, 5, 0, 524443, 5, 0, 524444, 5, 0, 524445, 5, 0, 524446, 5, 0, 524447, 5, 0, 524448, 5, 0, 524449, 5, 0, 524450, 5, 0, 524451, 5, 0, 524452, 5, 0, 524453, 5, 0, 524454, 5, 0, 524455, 5, 0, 524456, 5, 0, 524457, 5, 0, 524458, 5, 0, 524459, 5, 0, 524460, 5, 0, 524461, 5, 0, 524462, 5, 0, 524463, 5, 0, 524464, 5, 0, 524465, 5, 0, 524466, 5, 0, 524467, 5, 0, 524468, 5, 0, 524469, 5, 0, 524470, 5, 0, 524471, 5, 0, 524472, 5, 0, 524473, 5, 0, 524474, 5, 0, 524475, 5, 0, 524476, 5, 0, 524477, 5, 0, 524478, 5, 0, 524479, 5, 0, 524480, 5, 0, 524481, 5, 0, 524482, 5, 0, 524483, 5, 0, 524484, 5, 0, 524485, 5, 0, 524486, 5, 0, 524487, 5, 0, 524488, 5, 0, 524489, 5, 0, 524490, 5, 0, 524491, 5, 0, 524492, 5, 0, 524493, 5, 0, 524494, 5, 0, 524495, 5, 0, 524496, 5, 0, 524497, 5, 0, 524498, 5, 0, 524499, 5, 0, 524500, 5, 0, 524501, 5, 0, 524502, 5, 0, 524503, 5, 0, 655346, 8, 0, 655347, 8, 0, 655348, 8, 0, 655349, 8, 0, 655350, 8, 0, 655351, 8, 0, 655352, 8, 0, 655353, 8, 0, 655354, 8, 0, 655355, 8, 0, 655356, 8, 0, 655357, 8, 0, 655358, 8, 0, 655359, 8, 0, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 10, 0, 589834, 10, 0, 589835, 10, 0, 589836, 10, 0, 589837, 10, 0, 589838, 10, 0, 589839, 10, 0, 589840, 10, 0, 589841, 10, 0, 589842, 10, 0, 589843, 10, 0, 589844, 10, 0, 589845, 10, 0, 589846, 10, 0, 589847, 10, 0, 589848, 8, 0, 589849, 8, 0, 589850, 8, 0, 589851, 8, 0, 589852, 8, 0, 589853, 8, 0, 589858, 0, 0, 589863, 8, 0, 589864, 8, 0, 589865, 8, 0, 589866, 8, 0, 589867, 9, 0, 589872, 10, 0, 589873, 8, 0, 589874, 8, 0, 589875, 8, 0, 589876, 8, 0, 589877, 8, 0, 589878, 8, 0, 589879, 8, 0, 589880, 8, 0, 589881, 8, 0, 589882, 8, 0, 589883, 9, 0, 589888, 8, 0, 589889, 8, 0, 589890, 8, 0, 589891, 8, 0, 589892, 8, 0, 589893, 8, 0, 589894, 8, 0, 589895, 8, 0, 589896, 8, 0, 589897, 8, 0, 589898, 8, 0, 589899, 8, 0, 589900, 8, 0, 589901, 8, 0, 589902, 8, 0, 589903, 8, 0, 589904, 8, 0, 589905, 8, 0, 589906, 8, 0, 589907, 8, 0, 589908, 8, 0, 589909, 8, 0, 589910, 8, 0, 589911, 8, 0, 589912, 8, 0, 589913, 8, 0, 589914, 8, 0, 589915, 8, 0, 589916, 8, 0, 589917, 8, 0, 589918, 8, 0, 589919, 8, 0, 589920, 8, 0, 589921, 8, 0, 589922, 8, 0, 589923, 8, 0, 589924, 8, 0, 589925, 8, 0, 589926, 8, 0, 589927, 8, 0, 589928, 8, 0, 589929, 8, 0, 589930, 8, 0, 589931, 8, 0, 589932, 8, 0, 589933, 8, 0, 589934, 8, 0, 589935, 8, 0, 589936, 8, 0, 589937, 8, 0, 589938, 9, 0, 589944, 10, 0, 589945, 8, 0, 589946, 8, 0, 589947, 8, 0, 589948, 8, 0, 589949, 8, 0, 589950, 8, 0, 589951, 8, 0, 589952, 8, 0, 589953, 8, 0, 589954, 8, 0, 589955, 8, 0, 589956, 8, 0, 589957, 8, 0, 589958, 8, 0, 589959, 8, 0, 589960, 8, 0, 589961, 8, 0, 589962, 8, 0, 589963, 8, 0, 589964, 8, 0, 589965, 8, 0, 589966, 8, 0, 589967, 8, 0, 589968, 8, 0, 589969, 8, 0, 589970, 8, 0, 589971, 8, 0, 655361, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655430, 8, 0, 655431, 8, 0, 655432, 8, 0, 655433, 8, 0, 655434, 8, 0, 655435, 8, 0, 655436, 8, 0, 655437, 8, 0, 655438, 8, 0, 655439, 8, 0, 655440, 8, 0, 655441, 8, 0, 655442, 8, 0, 655443, 8, 0, 655444, 8, 0, 655445, 8, 0, 655446, 8, 0, 655447, 8, 0, 655448, 8, 0, 655449, 8, 0, 655473, 8, 0, 655474, 9, 0, 655480, 10, 0, 655481, 8, 0, 721009, 8, 0, 721010, 9, 0, 721016, 10, 0, 721017, 8, 0, 786545, 8, 0, 786546, 9, 0, 786552, 8, 0, 786553, 8, 0, 852081, 8, 0, 852082, 9, 0, 852088, 8, 0, 852089, 8, 0, 917617, 8, 0, 917618, 9, 0, 917624, 8, 0, 917625, 8, 0, 983153, 8, 0, 983154, 9, 0, 983160, 10, 0, 983161, 8, 0, 1048689, 8, 0, 1048690, 9, 0, 1048696, 10, 0, 1048697, 8, 0 )

[node name="Background" parent="." instance=ExtResource( 18 )]
tile_data = PoolIntArray( 327714, 1, 0, 327715, 1, 0, 327716, 1, 0, 327717, 1, 0, 327737, 0, 0, 327738, 0, 0, 327739, 0, 0, 327740, 0, 0, 327741, 0, 0, 327742, 0, 0, 327771, 0, 0, 327772, 0, 0, 327778, 0, 0, 327779, 0, 0, 393245, 1, 0, 393246, 1, 0, 393247, 1, 0, 393250, 2, 0, 393251, 2, 0, 393252, 2, 0, 393253, 2, 0, 393273, 0, 0, 393274, 0, 0, 393275, 0, 0, 393276, 0, 0, 393277, 0, 0, 393278, 0, 0, 393308, 0, 0, 393314, 0, 0, 393315, 0, 0, 393319, 0, 0, 393320, 0, 0, 393329, 0, 0, 393330, 0, 0, 393336, 0, 0, 393337, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458806, 0, 0, 458807, 0, 0, 458808, 0, 0, 458809, 0, 0, 458810, 0, 0, 458811, 0, 0, 458812, 0, 0, 458813, 0, 0, 458814, 0, 0, 458842, 0, 0, 458843, 0, 0, 458844, 0, 0, 458850, 0, 0, 458851, 0, 0, 458855, 0, 0, 458856, 0, 0, 458865, 0, 0, 458866, 0, 0, 458872, 0, 0, 458873, 0, 0, 458876, 1, 0, 458877, 1, 0, 458878, 1, 0, 458879, 1, 0, 458880, 1, 0, 458881, 1, 0, 458882, 1, 0, 458883, 1, 0, 458884, 1, 0, 458885, 1, 0, 458886, 1, 0, 458887, 1, 0, 458888, 1, 0, 458889, 1, 0, 458890, 1, 0, 458891, 1, 0, 458892, 1, 0, 458893, 1, 0, 458894, 1, 0, 458895, 1, 0, 458896, 1, 0, 458897, 1, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524359, 1, 0, 524360, 1, 0, 524361, 1, 0, 524362, 1, 0, 524363, 1, 0, 524364, 1, 0, 524365, 1, 0, 524366, 1, 0, 524367, 1, 0, 524368, 1, 0, 524369, 1, 0, 524370, 1, 0, 524371, 1, 0, 524372, 1, 0, 524373, 1, 0, 524374, 1, 0, 524375, 1, 0, 524376, 1, 0, 524412, 2, 0, 524413, 2, 0, 524414, 2, 0, 524415, 2, 0, 524416, 2, 0, 524417, 2, 0, 524418, 2, 0, 524419, 2, 0, 524420, 2, 0, 524421, 2, 0, 524422, 2, 0, 524423, 2, 0, 524424, 2, 0, 524425, 2, 0, 524426, 2, 0, 524427, 2, 0, 524428, 2, 0, 524429, 2, 0, 524430, 2, 0, 524431, 2, 0, 524432, 2, 0, 524433, 2, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 655418, 0, 0, 655419, 0, 0, 655420, 0, 0, 655421, 0, 0, 655422, 0, 0, 720954, 0, 0, 720955, 0, 0, 720956, 0, 0, 720957, 0, 0, 720958, 0, 0, 786490, 0, 0, 786491, 0, 0, 786492, 0, 0, 786493, 0, 0, 786494, 0, 0, 852026, 0, 0, 852027, 0, 0, 852028, 0, 0, 852029, 0, 0, 852030, 0, 0, 917562, 0, 0, 917563, 0, 0, 917564, 0, 0, 917565, 0, 0, 917566, 0, 0, 983098, 0, 0, 983099, 0, 0, 983100, 0, 0, 983101, 0, 0, 983102, 0, 0, 1048634, 0, 0, 1048635, 0, 0, 1048636, 0, 0, 1048637, 0, 0, 1048638, 0, 0 )

[node name="RespawnArea2D" parent="." instance=ExtResource( 12 )]
position = Vector2( 2880, 576 )

[node name="DryArea" parent="." groups=["DryArea"] instance=ExtResource( 1 )]
position = Vector2( 585, -84 )
scale = Vector2( 6.3, 3 )

[node name="DryArea2" parent="." groups=["DryArea"] instance=ExtResource( 1 )]
position = Vector2( 1420, -122 )
scale = Vector2( 28.5, 10 )

[node name="AntiRustPickup" parent="." instance=ExtResource( 9 )]
position = Vector2( 723, 184 )

[node name="AntiRustPickup2" parent="." instance=ExtResource( 9 )]
position = Vector2( 2784, 88 )

[node name="AntiRustPickup3" parent="." instance=ExtResource( 9 )]
position = Vector2( 2400, 280 )

[node name="level_end" parent="." instance=ExtResource( 19 )]

[node name="next_level_trigger" parent="." instance=ExtResource( 20 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -32, 256 )
rotation = -1.14312
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 21 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -48, 248 )
rotation = -0.0984091
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 21 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( -57, 253 )
rotation = 0.701585
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 21 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( -20, 253 )
rotation = 2.74868
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 21 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( -4.99999, 253 )
rotation = 1.27041
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 21 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 12, 257 )
rotation = -0.524359
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 21 )

[connection signal="script_changed" from="." to="." method="_on_Level_script_changed"]
[connection signal="body_entered" from="level_end" to="." method="_on_level_end_body_entered"]
[connection signal="body_entered" from="next_level_trigger" to="." method="_on_next_level_trigger_body_entered"]

[editable path="Water"]
